# clipmind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  TESTING.md  WEBSEARCH_SETUP.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
app/: root.tsx  routes.ts
app/components/: BasketSidebar.tsx  CanvasPanel.tsx  ChatPanel.tsx  WorkspaceLayout.tsx
app/db/: client.ts  schema.ts
app/db/migrations/: 0000_overrated_morph.sql  0001_condemned_vengeance.sql
app/db/migrations/meta/: _journal.json
app/routes/: api.chat.ts  api.oss-callback.ts  api.upload-token.ts  assets.tsx  home.tsx  projects.$projectId.tsx  test-read.tsx  test-write.tsx
app/store/: useCanvasStore.ts
app/utils/: ai.server.ts
apps/desktop/: package.json  patch_home.js  react-router.config.ts  vite.config.ts
apps/desktop/app/: app.css  entry.server.tsx  env.ts  root.tsx  routes.ts
apps/desktop/app/components/: AccordionSection.tsx  AssetDetailModal.tsx  Button.tsx  (+19 more)
apps/desktop/scripts/: bump-version.ts  download-ffmpeg.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_sha256_identity.sql
apps/desktop/src-tauri/src/: lib.rs  local_db.rs  local_file_server.rs
apps/server/: Dockerfile  package.json
apps/server/src/: db.ts  env.ts  index.ts
docs/: hotspot-library-design.md  long-term-memory.md
docs/ai-sdk/: README.md  backend-patterns.md  execution-plan.md  frontend-patterns.md  improvements.md
(+70 files in other folders)
