[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-util = "0.3.32"
async-stream = "0.3.6"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
tokio = { version = "1.51.1", features = ["fs", "io-util", "rt"] }
bytes = "1.11.1"
uuid = { version = "1.20.0", features = ["v4"] }
sha2 = "0.10"
tiny_http = "0.12"
urlencoding = "2.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
